# SAST_on_Decompilers

./: .gitignore  README.md
CVE/: README.md  add_cve.sh  download.sh
CVE/BUG-2010-libslirp/: README.md  no_dataflow_uaf.sc
CVE/BUG-2010-libslirp/decompiled/: README.md
CVE/BUG-2010-libslirp/decompiled/ghidra/: libslirp.stripped.c
CVE/BUG-2010-libslirp/decompiled/ghidra_to_recompile/: recompile_me.c
CVE/BUG-2010-libslirp/decompiled/ida/: libslirp.so.0.0.0.stripped.c
CVE/BUG-2010-libslirp/decompiled/ida_to_recompile/: Makefile  recompile_me.c
CVE/BUG-2010-libslirp/decompiled/retdec/: libslirp.stripped.c
CVE/BUG-2010-libslirp/decompiled/retdec_to_recompile/: recompile_me.c
CVE/BUG-2010-libslirp/project_code/libslirp/: .gitlab-ci.yml  CHANGELOG.md  Makefile  meson.build
CVE/BUG-2012-libssh2/: BUILD  README.md  command_lines
CVE/BUG-2012-libssh2/compiler_optimizations/O0/: README.md
CVE/BUG-2012-libssh2/compiler_optimizations/O4/: README.md
CVE/BUG-2012-libssh2/decompiled/: README.md
CVE/BUG-2018-wireshark2/: BUILD  README.md
CVE/BUG-2018-wireshark2/decompiled/: README.md
CVE/BUG-2018-wireshark2/project_code/: wireshark2
CVE/CVE-2013-6462/: README.md  command_lines
CVE/CVE-2013-6462/decompiled/: README.md
CVE/CVE-2017-1000249/: README.md  command_lines
CVE/CVE-2017-1000249/decompiled/: README.md
CVE/CVE-2017-17760/: BUILD  README.md
CVE/CVE-2017-17760/decompiled/: README.md
CVE/CVE-2017-6298/: BUILD  README.md  command_lines
CVE/CVE-2017-6298/decompiled/: README.md
CVE/CVE-2017-6298/project_code/ytnef/: .travis.yml  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  travis-build.sh  ytnef.spec.in
CVE/CVE-2017-6298/project_code/ytnef/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
CVE/CVE-2017-6298/project_code/ytnef/lib/: ChangeLog  Makefile.am  configure.ac  mapi.h  mapidefs.h  mapitags.h  tnef-errors.h  tnef-types.h  ytnef.c  ytnef.h
CVE/CVE-2017-6298/project_code/ytnef/lib/.deps/: ytnef.Tpo
CVE/CVE-2017-6298/project_code/ytnef/lib/.libs/: libytnef.la  libytnef.lai  libytnef.so.0  libytnef.so.0.0.0
CVE/CVE-2017-6298/project_code/ytnef/lib/doc/: recurrence.txt
CVE/CVE-2017-6298/project_code/ytnef/test-data/: Makefile.am  test.sh
CVE/CVE-2017-6298/project_code/ytnef/test-data/results/: bookmark.htm
CVE/CVE-2017-6298/project_code/ytnef/ytnef/: Makefile.am  README.ytnefprocess  main.c  settings.c  settings.h  utility.c  vcal.c  vcard.c  vtask.c  ytnefprocess.pl
CVE/CVE-2017-6298/project_code/ytnef/ytnef/.deps/: ytnef-main.Po
CVE/CVE-2017-6298/project_code/ytnef/ytnef/.libs/: ytnef
CVE/CVE-2017-6298/project_code/ytnef/ytnefprint/: Makefile.am  main.c
CVE/CVE-2017-6298/project_code/ytnef/ytnefprint/.deps/: ytnefprint-main.Po
CVE/CVE-2017-6298/project_code/ytnef/ytnefprint/.libs/: ytnefprint
CVE/CVE-2018-11360/: README.md  command_lines  dependencies.txt
CVE/CVE-2018-11360/decompiled/: README.md
CVE/CVE-2019-1010315/: README.md  command_lines
CVE/CVE-2019-1010315/decompiled/: README.md
CVE/CVE-2019-19334/: BUILD  README.md  command_lines
CVE/CVE-2019-19334/decompiled/: README.md
Toys/CPP/: test.cpp
Toys/ControlFlow/: a.out  test.c
Toys/MallocWrapper/: macroMalloc.stripped  mallocWrapper  src.c  structMalloc
Toys/UndetectableBOF/: Makefile  bof.c
decomp2recomp/: actions.txt
decomp2recomp/include/: defs.h
decomp2recomp/script/: adapt.py  fetch_undeclared_variables.py
txt/: CVE.txt  comparison_papers.txt  pointers.txt  tools.txt
(+159 files in other folders)
