EXTRA_DIST = \
	long-filename.tnef \
	missing-filenames.tnef \
	multi-value-attribute.tnef \
	one-file.tnef \
	rtf.tnef \
	test.sh \
	winmail.dat \
	results/208225_(5_seconds)_Voice_Mail.mp3 \
	results/allproductsmar2000.dat \
	results/bookmark.htm \
	results/generpts.src \
	results/TechlibDEC99-JAN00.doc \
	results/TechlibNOV99.doc \
	results/TechlibDEC99.doc \
	results/zappa_av1.jpg
